[package]
name = "SHLD_Token"
description = "SHLD Token for governance and voting on NEAR"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"  # Explicitly specify the main library file path

# Metadata for NEAR reproducible builds
[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.8.2-rust-1.81.0"
image_digest = "sha256:3b5e6efa1d0cef710009f9cc20c845d316187cc170455edc5ba7fdf471c19655"
container_build_command = ["cargo", "near", "build"]

# Dependencies
[dependencies]
near-sdk = "=5.5.0"  # NEAR SDK for building smart contracts
borsh = "0.9.3"      # Serialization framework used for NEAR
serde_json = "1"      # JSON serialization/deserialization support

# Dev dependencies for testing and workspaces
[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = { version = "0.14.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

# Optimization settings for the release build
[profile.release]
codegen-units = 1
opt-level = "z"   # Optimize for small binary size
lto = true        # Link Time Optimization
debug = false
panic = "abort"   # Panic behavior
overflow-checks = true  # Extra safety for arithmetic operations
